src/test/ui/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0599]: no method named `plus` found for type `u32` in the current scope
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^ method not found in `u32`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Plus` defines an item `plus`, perhaps you need to implement it
  --> $DIR/call-const-trait-method-fail.rs:4:1
   |
LL | pub trait Plus {
   | ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
